first commit for green

--- a/.~README.md
+++ b/.~README.md
@@ -1,16 +1,9 @@
 ## Project Overview
 
-
+This is blue.
 
 ### Project Tasks
 
 ---
 
-### Lesson Learnt
-
-Validating Jenkinsfile
-
-```
-curl --user username:password -X POST -F "jenkinsfile=<Jenkinsfile" http://jenkins-url:8080/pipeline-model-converter/validate]()
-```
 
